--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mutact",
+    "name": "game-board",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -20,6 +20,8 @@
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-plugin-import": "^2.20.1",
+        "less": "^3.11.1",
+        "less-loader": "^5.0.0",
         "style-loader": "^1.1.4",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
