--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-plugin-import": "^2.20.1",
+        "file-loader": "^6.0.0",
         "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "style-loader": "^1.1.4",
