--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "game-board",
+    "name": "@mposk98/game-board",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "main": "dist/main.js",
     "scripts": {
         "build-prod": "webpack --mode=production",
         "build-dev": "webpack --mode=development",
@@ -12,8 +11,8 @@
         "bd": "npm run build-dev",
         "bp": "npm run build-prod"
     },
-    "author": "",
-    "license": "ISC",
+    "author": "mposk98",
+    "license": "MIT",
     "devDependencies": {
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.5.2",
@@ -28,5 +27,17 @@
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "directories": {
+        "test": "test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mposk98/game-board.git"
+    },
+    "bugs": {
+        "url": "https://github.com/mposk98/game-board/issues"
+    },
+    "homepage": "https://github.com/mposk98/game-board#readme",
+    "description": ""
 }
